# para-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
paraclient/: AWSAuth.py  __init__.py  auth.py  constraint.py  pager.py  paraclient.py  paraobject.py  version.py
tests/: test_paraclient.py  test_paraobject.py
